# irlcli

./: Cargo.toml  LICENSE  README.md  SOURCES.md
.claude-plugin/: marketplace.json  plugin.json
.claude-plugin/skills/: irl.md
crates/irl-core/: Cargo.toml
crates/irl-core/src/: cache.rs  config.rs  error.rs  fuzzy.rs  geo.rs  http.rs  lib.rs  output.rs
crates/irl-cro/: Cargo.toml
crates/irl-cro/src/: api.rs  commands.rs  models.rs
crates/irl-cso/: Cargo.toml
crates/irl-cso/src/: api.rs  commands.rs  jsonstat.rs  lib.rs  models.rs
crates/irl-epa/: Cargo.toml
crates/irl-epa/src/: api.rs  commands.rs  models.rs
crates/irl-geo/: Cargo.toml
crates/irl-geo/src/: api.rs  commands.rs  models.rs
crates/irl-met/: Cargo.toml
crates/irl-met/src/: api.rs  commands.rs  lib.rs  locations.rs  models.rs
crates/irl-oireachtas/: Cargo.toml
crates/irl-oireachtas/src/: api.rs  commands.rs  constituencies.rs  lib.rs  models.rs
crates/irl-property/: Cargo.toml
crates/irl-property/src/: api.rs  commands.rs  db.rs  models.rs
crates/irl-tailte/: Cargo.toml
crates/irl-tailte/src/: api.rs  commands.rs  models.rs
crates/irl-transport/: Cargo.toml
crates/irl-transport/src/: api.rs  commands.rs  gtfs_static.rs  lib.rs  models.rs
crates/irl-water/: Cargo.toml
crates/irl-water/src/: api.rs  commands.rs  models.rs
specs/done/: 01-foundation-and-discovery.md  01-llm-data-fidelity.md  02-smart-resolution-and-context.md  03-browser-emulation-for-protected-sources.md  04-cross-source-queries.md  04-specialist-sources.md  05-claude-code-irl-skill.md  05-debate-transcripts.md  06-watch-mode.md  08-property-trends.md  09-flood-risk-overlay.md  10-td-profile.md
specs/reviews/: 05-claude-code-irl-skill.md
specs/todo/: 02-weather-and-statistics.md  03-auth-and-complex-data.md  07-cso-location-enrichment.md
src/: main.rs
