[workspace]
members = [
    "crates/irl-core",
    "crates/irl-oireachtas",
    "crates/irl-cso",
    "crates/irl-met",
    "crates/irl-transport",
    "crates/irl-cro",
    "crates/irl-property",
    "crates/irl-epa",
    "crates/irl-water",
    "crates/irl-tailte",
    "crates/irl-geo",
]
resolver = "2"

[workspace.dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "cookies"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"
toml = "0.8"
tabled = "0.17"
colored = "2"
indicatif = "0.17"
thiserror = "2"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
quick-xml = "0.37"
encoding_rs = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }

[package]
name = "irl"
version = "0.1.0"
edition = "2021"
description = "Unified CLI for Irish public sector open data"
license = "MIT"
repository = "https://github.com/your-org/irl-cli"

[[bin]]
name = "irl"
path = "src/main.rs"

[dependencies]
irl-core = { path = "crates/irl-core" }
irl-oireachtas = { path = "crates/irl-oireachtas" }
irl-cso = { path = "crates/irl-cso" }
irl-met = { path = "crates/irl-met" }
irl-transport = { path = "crates/irl-transport" }
irl-cro = { path = "crates/irl-cro" }
irl-property = { path = "crates/irl-property" }
irl-epa = { path = "crates/irl-epa" }
irl-water = { path = "crates/irl-water" }
irl-tailte = { path = "crates/irl-tailte" }
irl-geo = { path = "crates/irl-geo" }
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
