[package]
name = "irl-core"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tabled = { workspace = true }
colored = { workspace = true }
indicatif = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
csv = { workspace = true }

[dev-dependencies]
tempfile = "3"
