[package]
name = "irl-property"
version = "0.1.0"
edition = "2021"

[dependencies]
irl-core = { path = "../irl-core" }
clap = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
csv = { workspace = true }
encoding_rs = { workspace = true }

[features]
integration-tests = []
