[package]
name = "irl-property"
version = "0.1.0"
edition = "2021"

[dependencies]
irl-core = { path = "../irl-core" }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
csv = { workspace = true }
encoding_rs = { workspace = true }
tabled = { workspace = true }
rusqlite = { version = "0.32", features = ["bundled"] }

[dev-dependencies]
tempfile = "3"

[features]
integration-tests = []
