[package]
name = "irl-water"
version = "0.1.0"
edition = "2021"

[dependencies]
irl-core = { path = "../irl-core" }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tabled = { workspace = true }

[features]
integration-tests = []
